--- a/src/Smartstore.Web/Views/Product/Product.cshtml
+++ b/src/Smartstore.Web/Views/Product/Product.cshtml
@@ -78,8 +78,8 @@
 
                         @if (Model.DisplayAdminLink)
                         {
-                            <a asp-action="Edit" asp-controller="Product" asp-area="admin" asp-route-id="@Model.Id" 
-                               class="btn btn-secondary btn-flat btn-admin-edit" 
+                            <a asp-action="Edit" asp-controller="Product" asp-area="admin" asp-route-id="@Model.Id"
+                               class="btn btn-secondary btn-flat btn-sm btn-admin-edit"
                                target="admin-product" 
                                rel="nofollow">
                                 <i class="fa fa-cog"></i>
