Added a widget zone

--- a/src/Smartstore.Web/Views/Shared/Components/OffCanvasCart/Default.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/OffCanvasCart/Default.cshtml
@@ -6,6 +6,7 @@
     var labelStyle = Display.GetThemeVariable<string>("shopbar-label", "warning");
 }
 
+<zone name="offcanvas_cart_before"></zone>
 
 <div class="offcanvas-cart-header offcanvas-tabs">
     <ul class="nav nav-tabs nav-tabs-line row no-gutters" role="tablist">
