--- a/src/Smartstore.Web/Areas/Admin/Views/Shipment/_Grid.Shipments.Search.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Shipment/_Grid.Shipments.Search.cshtml
@@ -12,10 +12,10 @@
     </div>
 </div>
 <div class="form-group">
-    <smart-label asp-for="TrackingNumber" />
+    <smart-label asp-for="TrackingNumber" sm-ignore-hint="true" />
     <editor asp-for="TrackingNumber" asp-template="SearchExpression" />
 </div>
 <div class="form-group">
-    <smart-label asp-for="ShippingMethod" />
-    <input asp-for="ShippingMethod" />
+    <smart-label asp-for="ShippingMethod" sm-ignore-hint="true" />
+    <editor asp-for="ShippingMethod" asp-template="SearchExpression" />
 </div>
