--- a/src/Smartstore.Web/Themes/Flex/wwwroot/_misc.scss
+++ b/src/Smartstore.Web/Themes/Flex/wwwroot/_misc.scss
@@ -5,10 +5,8 @@
 // The part of the image to be displayed is specified via "object-position".
 // Used on blog post and news page.
 // -------------------------------------------------
-.cover-image-container {
-    display: flex;
-    overflow: auto;
 
+.cover-image-container {
     > img {
         object-fit: cover;
     }
@@ -23,21 +21,6 @@
         max-width: 280px;
         height: 100%;
     }*/
-
-    .cover-image-dropdown-root {
-        position: relative;
-        top: -.5rem;
-    }
-
-    .cover-image-dropdown {
-        position: absolute;
-        right: 0;
-
-        &:hover {
-            background-color: $white;
-            border-color: rgba($black, 0.3);
-        }
-    }
 }
 
 
@@ -190,6 +173,10 @@
 
     &:hover .admin-actions {
         opacity: 0.7;
+    }
+
+    &:focus-within .admin-actions {
+        opacity: 1;
     }
 }
 
