There was no vertical space in themes

--- a/src/Smartstore.Web/Areas/Admin/Views/Theme/List.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Theme/List.cshtml
@@ -140,7 +140,7 @@
         <fieldset>
             <legend class="mb-3">@caption</legend>
 
-            <div id="theme-list" class="row sm-gutters">
+            <div id="theme-list" class="row g-3">
                 @foreach (var theme in themes)
                 {
                     var isActive = theme.IsActive;
