Summernote: zoom levels & resize handling

--- a/src/Smartstore.Web/wwwroot/lib/editors/summernote/scss/summernote.scss
+++ b/src/Smartstore.Web/wwwroot/lib/editors/summernote/scss/summernote.scss
@@ -168,7 +168,8 @@ $img-margin-right: 10px;
 // ------------------------------------------
 
 .note-editor.codeview {
-    .note-editable {
+    .note-editable,
+    .note-statusbar-content {
         display: none;
     }
 
