Summernote: more work on selection paths

--- a/src/Smartstore.Web/wwwroot/lib/editors/summernote/scss/summernote.scss
+++ b/src/Smartstore.Web/wwwroot/lib/editors/summernote/scss/summernote.scss
@@ -304,10 +304,14 @@ $img-margin-right: 10px;
     }
 }
 
+.note-path-item-divider {
+    cursor: default;
+}
+
 .note-tag-glimpse {
     position: absolute;
     pointer-events: none;
-    z-index: 9999;
+    z-index: $zindex-tooltip - 1;
     background-color: rgba(var(--primary-rgb), 0.2);
 }
 
