PayPal: Buttons on payment selection page can now (with sticky order summary) be displayed block style

--- a/src/Smartstore.Modules/Smartstore.PayPal/wwwroot/public.scss
+++ b/src/Smartstore.Modules/Smartstore.PayPal/wwwroot/public.scss
@@ -9,6 +9,9 @@
 @include media-breakpoint-up(md) {
     .paypal-button-container .paypal-buttons {
         width: 240px !important;
+        .payment-method-page & {
+            width: 100% !important;
+        }
     }
 }
 
