--- a/src/Smartstore.Web/Areas/Admin/Views/Setting/Search.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Setting/Search.cshtml
@@ -81,6 +81,15 @@
                 </div>
                 <div class="adminRow">
                     <div class="adminTitle">
+                        <smart-label asp-for="UseFeaturedSorting" />
+                    </div>
+                    <div class="adminData">
+                        <setting-editor asp-for="UseFeaturedSorting"></setting-editor>
+                        <span asp-validation-for="UseFeaturedSorting"></span>
+                    </div>
+                </div>
+                <div class="adminRow">
+                    <div class="adminTitle">
                         <smart-label asp-for="SearchProductByIdentificationNumber" />
                     </div>
                     <div class="adminData">
