Updated About page

--- a/src/Smartstore.Web/Areas/Admin/Views/Home/About.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Home/About.cshtml
@@ -25,14 +25,13 @@
         new LibraryModel("PhotoSwipe", "http://photoswipe.com/", LibraryLicense.MIT, "2014-2019 Dmitry Semenov, http://dimsemenov.com"),
         new LibraryModel("slick (carousel)", "http://kenwheeler.github.io/slick/", LibraryLicense.MIT, "2013-2022 Ken Wheeler"),
         new LibraryModel("Bootstrap", "https://github.com/twbs/bootstrap/", LibraryLicense.MIT, "2011-2022 Twitter, Inc., 2011-2022 The Bootstrap Authors"),
-        new LibraryModel("ua_parser", "https://github.com/ua-parser/uap-csharp/", LibraryLicense.Apache2, "2012 Søren Enemærke"),
         new LibraryModel("underscore.js", "http://underscorejs.org/", LibraryLicense.MIT, "2009-2021 Jeremy Ashkenas, Julian Gonggrijp, and DocumentCloud and Investigative Reporters & Editors"),
         new LibraryModel("wkhtmltopdf", "http://wkhtmltopdf.org/", LibraryLicense.LGPL, "2007 Free Software Foundation, Inc. http://fsf.org/"),
         new LibraryModel("AngleSharp", "https://github.com/AngleSharp/AngleSharp/", LibraryLicense.MIT, "2013 - 2021 AngleSharp"),
-        new LibraryModel("AsyncEnumerator", "https://github.com/Dasync/AsyncEnumerable/", LibraryLicense.MIT, "2019 D-ASYNC"),
+        new LibraryModel("Reactive Extensions for .NET", "https://github.com/dotnet/reactive/", LibraryLicense.MIT, ".NET Foundation and Contributors"),
         new LibraryModel("Autoprefixer Host for .NET", "https://github.com/Taritsyn/AutoprefixerHost/", LibraryLicense.MIT, "2019-2021 Andrey Taritsyn"),
-        new LibraryModel("CoreFtp", "https://github.com/sparkeh9/CoreFTP/", LibraryLicense.MIT, "2018 Nicholas Briscoe"),
-        new LibraryModel("Cron Expression Descriptor", "https://github.com/bradymholt/cron-expression-descriptor/", LibraryLicense.MIT, "2017 Brady Holt"),
+        new LibraryModel("FluentFtp", "https://github.com/robinrodricks/FluentFTP/", LibraryLicense.MIT, "2018 Nicholas Briscoe"),
+        new LibraryModel("Cron Expression Descriptor", "https://github.com/bradymholt/cron-expression-descriptor/", LibraryLicense.MIT, "2015 Robin Rodricks and FluentFTP Contributors"),
         new LibraryModel("DotLiquid", "https://github.com/dotliquid/dotliquid/", LibraryLicense.MSPL, "2022 DotLiquid Contributors"),
         new LibraryModel("FluentMigrator ", "https://github.com/fluentmigrator/fluentmigrator/", LibraryLicense.Apache2, "2022 FluentMigrator Contributors"),
         new LibraryModel("HtmlSanitizer", "https://github.com/mganss/HtmlSanitizer/", LibraryLicense.MIT, "2013-2016 Michael Ganss and HtmlSanitizer contributors"),
@@ -42,13 +41,20 @@
         new LibraryModel("GeoIP2 .NET API", "https://github.com/maxmind/GeoIP2-dotnet/", LibraryLicense.Apache2, "2013-2021 MaxMind, Inc."),
         new LibraryModel("Moq", "https://github.com/moq/moq4/", LibraryLicense.BSD3, "2007, Clarius Consulting, Manas Technology Solutions, InSTEDD, and Contributors"),
         new LibraryModel("NCrontab", "https://github.com/atifaziz/NCrontab/", LibraryLicense.Apache2, "2022 NCrontab Contributors"),
-        new LibraryModel("NUglify", "https://github.com/trullock/NUglify/", LibraryLicense.Apache2, "2016, Alexandre Mutel"),
         new LibraryModel("Parlot", "https://github.com/sebastienros/parlot/", LibraryLicense.BSD3, "2020, Sébastien Ros"),
         new LibraryModel("Pomelo.EntityFrameworkCore.MySql", "https://github.com/PomeloFoundation/Pomelo.EntityFrameworkCore.MySql/", LibraryLicense.MIT, "2017 Pomelo Foundation"),
         new LibraryModel("Npgsql.EntityFrameworkCore.PostgreSQL", "https://github.com/npgsql/efcore.pg/", LibraryLicense.PostgreSQL, "2002-2021, Npgsql"),
         new LibraryModel("PreMailer.Net", "https://github.com/milkshakesoftware/PreMailer.Net/", LibraryLicense.MIT, "2013 Milkshake Software (http://milkshakesoftware.com)"),
         new LibraryModel("Serilog", "https://github.com/serilog/serilog/", LibraryLicense.Apache2, "2013-2020 Serilog Contributors"),
-        new LibraryModel("EFCore.BulkExtensions", "https://github.com/yang-er/efcore-ext/", LibraryLicense.MIT, "2017 borisdj")
+
+        new LibraryModel("AsyncKeyedLock", "https://github.com/MarkCiliaVincenti/AsyncKeyedLock/", LibraryLicense.MIT, "2024 Mark Cilia Vincenti"),
+        new LibraryModel("Barcoder", "https://github.com/huysentruitw/barcoder/", LibraryLicense.MIT, "2018-2022 Wouter Huysentruit"),
+        new LibraryModel("LumenWorks CSV Reader", "https://github.com/phatcher/CsvReader/", LibraryLicense.MIT, "2005-2011 Sébastien Lorion, 2014 Paul Hatcher"),
+        new LibraryModel("Nuke", "https://github.com/nuke-build/nuke/", LibraryLicense.MIT, "2023 Maintainers of NUKE"),
+        new LibraryModel("Polly", "https://github.com/App-vNext/Polly/", LibraryLicense.BSD3, "2015-2023, App vNext"),
+        new LibraryModel("SharpScss", "https://github.com/xoofx/SharpScss/", LibraryLicense.BSD3, "2016-2020, Alexandre Mutel"),
+        new LibraryModel("Swashbuckle", "https://github.com/domaindrivendev/Swashbuckle.AspNetCore/", LibraryLicense.MIT, "2016 Richard Morris"),
+        new LibraryModel("System.Linq.Dynamic.Core", "https://github.com/zzzprojects/System.Linq.Dynamic.Core/", LibraryLicense.Apache2, "2016 Stef Heyenrath"),
     };
 }
 
