--- a/src/Smartstore.Modules/Smartstore.PayPal/Views/Shared/Components/PayPalPaymentSelection/Default.cshtml
+++ b/src/Smartstore.Modules/Smartstore.PayPal/Views/Shared/Components/PayPalPaymentSelection/Default.cshtml
@@ -27,54 +27,43 @@
         "NoScriptsLoaded": "@T("Plugins.Smartstore.PayPal.NoScriptsLoaded")"
     };
 
+    const paymentMap = {
+        "Payments.PayPalStandard": "paypal",
+        "Payments.PayPalSepa": "sepa",
+        "Payments.PayPalPayLater": "paylater",
+        "Payments.PayPalGooglePay": "googlepay"
+    };
+
     $(function () {
-        var ppButton = new PayPalButton("#paypal-button-container", "@Model.Funding");
-        // TODO: (mh) Don't mix up jQuery and native DOM. Use .querySelector() here.
-        var btnNext = $(".payment-method-next-step-button");
-        var btnContainer = $("#paypal-button-container");
-        var btnContainerGooglePay = $("#paypal-google-pay-container");
+        const ppButton = new PayPalButton("#paypal-button-container", "@Model.Funding");
+        const btnNext = $(".payment-method-next-step-button");
+        const btnContainer = $("#paypal-button-container");
+        const btnContainerGooglePay = $("#paypal-google-pay-container");
 
         // Listen for changes to the radio inputs.
         $(document).on("change", "input[name='paymentmethod']", (e) => {
-            var isPayPal = false;
-            var isGooglePay = false;
-            var fundingSource = "paypal";
+            const method = e.target.value;
+            const fundingSource = paymentMap[method] || null;
 
-            if (e.target.value == "Payments.PayPalStandard") {
-                isPayPal = true;
-            }
-            else if (e.target.value == "Payments.PayPalSepa") {
-                isPayPal = true;
-                fundingSource = "sepa";
-            }
-            else if (e.target.value == "Payments.PayPalPayLater") {
-                isPayPal = true;
-                fundingSource = "paylater";
-            }
-            else if (e.target.value == "Payments.PayPalGooglePay") {
-                isGooglePay = true;
-                fundingSource = "googlepay";
+            if (!fundingSource) {
+                btnNext.show();
+                btnContainer.hide();
+                btnContainerGooglePay.hide();
+                return;
             }
 
-            if (isPayPal || isGooglePay) {
-                if (isPayPal) {
-                    ppButton.initPayPalScript(fundingSource, true);
-                    btnContainer[0].style.display = 'block';
-                    btnContainerGooglePay[0].style.display = 'none';
-                }
-                else if (isGooglePay) {
-                    const ppGooglePayButton = new GooglePayPayPalButton();
-                    btnContainer[0].style.display = 'none';
-                    btnContainerGooglePay[0].style.display = 'block';
-                }
-
-                btnNext[0].style.display = 'none';
+            if (fundingSource === "googlepay") {
+                new GooglePayPayPalButton();
+                btnContainer.hide();
+                btnContainerGooglePay.show();
             }
             else {
-                btnNext[0].style.display = 'block';
-                btnContainer[0].style.display = 'none';
-                btnContainerGooglePay[0].style.display = 'none';
+                ppButton.initPayPalScript(fundingSource, true);
+                btnContainer.show();
+                btnContainerGooglePay.hide();
             }
+
+            btnNext.hide();
         });
 
         $("input[name='paymentmethod']:checked").trigger("change");
